.provarCaches/00D6C0000000xA6UAI/objects/Course_Template__c.object
<CustomObject>
    <fields>
        <fullName>Course_Catalog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Catalog</label>
        <referenceTo>Course_Catalog__c</referenceTo>
        <relationshipLabel>Course Templates</relationshipLabel>
        <relationshipName>Course_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Class_Days__c</fullName>
        <label>Course Class Days</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Default_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maximum_Hours_Per_Day__c</fullName>
        <label>Maximum Hours Per Day</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Course Template</label>
    <nameField>
        <label>Course Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>